# mandelbrot-cpp

./: .gitignore  CMakeLists.txt  example.CMakeUserPresets.json  vcpkg.json
src/: MPC.cpp  MPC.h  Mandelbrot.cpp  Mandelbrot.h  MandelbrotDouble.cpp  MandelbrotDouble.h  main.cpp
